<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="main_start_button">Start</string>
    <string name="game_tile_1">Upper left tile</string>
    <string name="game_tile_2">Upper tile</string>
    <string name="game_tile_3">Upper right tile</string>
    <string name="game_tile_4">Left tile</string>
    <string name="game_tile_5">Center tile</string>
    <string name="game_tile_6">Right tile</string>
    <string name="game_tile_7">Bottom left tile</string>
    <string name="game_tile_8">Bottom tile</string>
    <string name="game_tile_9">Bottom right tile</string>
    <string name="game_status_x_turn">Player X\'s turn</string>
    <string name="game_status_o_turn">Player O\'s turn</string>
    <string name="game_status_x_won">Player X won!</string>
    <string name="game_status_o_won">Player O won!</string>
    <string name="game_status_tie">It\'s a tie!</string>
    <string name="game_play_again_button">Play Again</string>
</resources>