<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_bg_opaque"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#80FFFFFF"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:width="200dp"
        android:background="#80FFFFFF"
        android:padding="10dp"
        android:text="@string/game_status_x_turn"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tile_8" />

    <ImageButton
        android:id="@+id/tile_1"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@drawable/tile"
        android:contentDescription="@string/game_tile_1"
        app:layout_constraintBottom_toTopOf="@+id/tile_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tile_2" />

    <ImageButton
        android:id="@+id/tile_2"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@drawable/tile"
        android:contentDescription="@string/game_tile_2"
        app:layout_constraintBottom_toTopOf="@+id/tile_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/tile_3"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@drawable/tile"
        android:contentDescription="@string/game_tile_3"
        app:layout_constraintBottom_toTopOf="@+id/tile_6"
        app:layout_constraintStart_toEndOf="@+id/tile_2" />

    <ImageButton
        android:id="@+id/tile_4"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@drawable/tile"
        android:contentDescription="@string/game_tile_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tile_5"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/tile_5"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@drawable/tile"
        android:contentDescription="@string/game_tile_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/tile_6"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@drawable/tile"
        android:contentDescription="@string/game_tile_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tile_5"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/tile_7"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@drawable/tile"
        android:contentDescription="@string/game_tile_7"
        app:layout_constraintEnd_toStartOf="@+id/tile_8"
        app:layout_constraintTop_toBottomOf="@+id/tile_4" />

    <ImageButton
        android:id="@+id/tile_8"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@drawable/tile"
        android:contentDescription="@string/game_tile_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tile_5" />

    <ImageButton
        android:id="@+id/tile_9"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@drawable/tile"
        android:contentDescription="@string/game_tile_9"
        app:layout_constraintStart_toEndOf="@+id/tile_8"
        app:layout_constraintTop_toBottomOf="@+id/tile_6" />

</androidx.constraintlayout.widget.ConstraintLayout>